--- a/.github/workflows/porto.yaml
+++ b/.github/workflows/porto.yaml
@@ -26,7 +26,12 @@ jobs:
         chmod 600 temp_key
 
         ssh -i temp_key $DEPLOY_USER@$DEPLOY_SERVER << EOF
-          cd /home/$DEPLOY_USER/devops-portofolio || exit 1
+         if [ ! -d "/home/$DEPLOY_USER/devops-portofolio" ]; then
+           cd /home/$DEPLOY_USER
+           git clone git@github.com:DioSptra/GITHUBxDOCKER.git devops-portofolio
+          fi
+  
+        cd /home/$DEPLOY_USER/devops-portofolio
 
           git pull origin master
 
