--- a/.github/workflows/porto.yaml
+++ b/.github/workflows/porto.yaml
@@ -31,7 +31,7 @@ jobs:
            git clone git@github.com:DioSptra/GITHUBxDOCKER.git devops-portofolio
           fi
   
-        cd /home/$DEPLOY_USER/devops-portofolio
+         cd /home/$DEPLOY_USER/devops-portofolio || exit 1
 
           git pull origin master
 
