--- a/.github/workflows/porto.yaml
+++ b/.github/workflows/porto.yaml
@@ -35,7 +35,7 @@ jobs:
 
           git pull origin master
 
-          # Run the install-docker.sh if Docker not installedd
+          # Run the install-docker.sh if Docker not installed
           if ! command -v docker &> /dev/null
           then
               echo "Docker not found, installing..."
